# project_builder

./: CMakeLists.txt  README.md  builder.h  common_types.h  converter.h  main.cpp  mapper.h  project_exceptions.h  shared.h
output/: conversion_report_1722743837.json  conversion_report_1722749154.json
test/: root.proj
test/sub_folder1/: sb1.proj
test/sub_folder1/sub_folder1_2/: sb1_2.proj
test/sub_folder2/sub_folder2_1/: sb2_1.proj
test/sub_folder3/: sb3.proj
test/sub_folder3/sub_folder3_1/: sb3_1.proj
